fixed alt tag & some issues with form colours being low contrast

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -339,7 +339,7 @@ a {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  background-color: #1b1b1b;
+  background-color: #2b2b2b;
   margin: 50px auto;
   padding: 20px;
 }
@@ -503,7 +503,7 @@ a {
   width: 80%;
   padding: 20px;
   background-color: #FFBF00;
-  color: #1b1b1b;
+  color: #2b2b2b;
   margin: auto;
   border-radius: 15px;
 }
@@ -548,7 +548,7 @@ a {
   width: 80%;
   max-width: 500px;
   min-height: 400px;
-  background-color: #1b1b1b;
+  background-color: #2b2b2b;
   margin: 50px auto;
   padding: 20px;
 }
@@ -598,7 +598,7 @@ a {
   height: fit-content;
   margin: 20px auto;
   background-color: #FFBF00;
-  color: #1b1b1b;
+  color: #2b2b2b;
   border-radius: 15px;
   padding: 20px;
 }
